# Babel

./: .gitignore  CLAUDE.md  CODEX_CONTINUE_CONTEXT.md  README.md  collect_all.sh  collect_demo.sh
api/: gesture_service.py
babel/: .gitignore  README.md
babel/firmware/: platformio.ini
babel/firmware/src/: config.example.h  main.cpp  mascot.cpp  mascot.h
babel/server/: index.ts  package-lock.json  package.json  roomArchive.ts
babel/server/data/: room-archives.json
babel/web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
babel/web/src/: App.tsx  index.css  vite-env.d.ts
babel_esp/: CMakeLists.txt  diag_server.py  requirements.txt  sdkconfig  server.py
babel_esp/build_codex/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  flash_app_args  flash_args  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
babel_esp/build_codex/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  bootloader.elf  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  project_description.json
babel_esp/build_codex/config/: sdkconfig.cmake
babel_esp/build_codex/esp-idf/: cmake_install.cmake
babel_esp/build_codex/gdbinit/: gdbinit  symbols
babel_esp/build_codex/log/: idf_py_stderr_output_10632  (+25 more)
babel_esp/main/: CMakeLists.txt  babel_esp.c  config.example.h
core/: claude_brain.py  gesture_recognizer.py  mediapipe_extractor.py
data_collection/: collect_data.py  download_dataset.py  load_kaggle_data.py  verify_data.py
(+83 files in other folders)
